src/rtl/org/tzi/rtl/tgg/parser/RTLRuleParser.java
// $ANTLR 3.4 RTLRule.g 2014-05-29 14:33:31

/*
 *  @author Duc-Hanh Dang, Khoa-Hai Nguyen, Xuan-Loi Vu
 */

package org.tzi.rtl.tgg.parser;

import org.tzi.use.parser.base.BaseParser;
import org.tzi.rtl.tgg.parser.ast.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class RTLRuleParser extends BaseParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARROW", "AT", "BAR", "COLON", "COLON_COLON", "COLON_EQUAL", "COMMA", "COND_EXPR", "DOT", "DOTDOT", "EQUAL", "ESC", "GREATER", "GREATER_EQUAL", "HASH", "HEX_DIGIT", "IDENT", "INT", "LBRACE", "LBRACK", "LESS", "LESS_EQUAL", "LPAREN", "MINUS", "ML_COMMENT", "NEWLINE", "NON_OCL_STRING", "NOT_EQUAL", "PLUS", "RANGE_OR_INT", "RBRACE", "RBRACK", "REAL", "RPAREN", "SEMI", "SLASH", "SL_COMMENT", "STAR", "STRING", "VOCAB", "WS", "'EXPLICIT'", "'apply'", "'as'", "'backward'", "'checkCorr'", "'checkSource'", "'checkTarget'", "'co-evolution'", "'direction'", "'do'", "'end'", "'forward'", "'if'", "'in'", "'integration'", "'mode'", "'rule'", "'synchronization'", "'transformation'", "'while'"
    };

    public static final int EOF=-1;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int T__64=64;
    public static final int ARROW=4;
    public static final int AT=5;
    public static final int BAR=6;
    public static final int COLON=7;
    public static final int COLON_COLON=8;
    public static final int COLON_EQUAL=9;
    public static final int COMMA=10;
    public static final int COND_EXPR=11;
    public static final int DOT=12;
    public static final int DOTDOT=13;
    public static final int EQUAL=14;
    public static final int ESC=15;
    public static final int GREATER=16;
    public static final int GREATER_EQUAL=17;
    public static final int HASH=18;
    public static final int HEX_DIGIT=19;
    public static final int IDENT=20;
    public static final int INT=21;
    public static final int LBRACE=22;
    public static final int LBRACK=23;
    public static final int LESS=24;
    public static final int LESS_EQUAL=25;
    public static final int LPAREN=26;
    public static final int MINUS=27;
    public static final int ML_COMMENT=28;
    public static final int NEWLINE=29;
    public static final int NON_OCL_STRING=30;
    public static final int NOT_EQUAL=31;
    public static final int PLUS=32;
    public static final int RANGE_OR_INT=33;
    public static final int RBRACE=34;
    public static final int RBRACK=35;
    public static final int REAL=36;
    public static final int RPAREN=37;
    public static final int SEMI=38;
    public static final int SLASH=39;
    public static final int SL_COMMENT=40;
    public static final int STAR=41;
    public static final int STRING=42;
    public static final int VOCAB=43;
    public static final int WS=44;

    // delegates
    public BaseParser[] getDelegates() {
        return new BaseParser[] {};
    }

    // delegators


    public RTLRuleParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public RTLRuleParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return RTLRuleParser.tokenNames; }
    public String getGrammarFileName() { return "RTLRule.g"; }



    // $ANTLR start "tggRuleCollection"
    // RTLRule.g:45:1: tggRuleCollection returns [ASTTggRuleCollection n] : 'transformation' name= IDENT 'direction' direction= ( 'forward' | 'backward' | 'integration' | 'co-evolution' | 'synchronization' ) ( (matchID= IDENT ':=' )? ruleApplication SEMI )* (tggRule= tggRuleDefinition )* EOF ;
    public final ASTTggRuleCollection tggRuleCollection() throws RecognitionException {
        ASTTggRuleCollection n = null;


        Token name=null;
        Token direction=null;
        Token matchID=null;
        ASTTggRule tggRule =null;

        ASTTggRuleApplication ruleApplication1 =null;



        	ASTTggRuleMatch match = null;

        try {
            // RTLRule.g:49:5: ( 'transformation' name= IDENT 'direction' direction= ( 'forward' | 'backward' | 'integration' | 'co-evolution' | 'synchronization' ) ( (matchID= IDENT ':=' )? ruleApplication SEMI )* (tggRule= tggRuleDefinition )* EOF )
            // RTLRule.g:50:5: 'transformation' name= IDENT 'direction' direction= ( 'forward' | 'backward' | 'integration' | 'co-evolution' | 'synchronization' ) ( (matchID= IDENT ':=' )? ruleApplication SEMI )* (tggRule= tggRuleDefinition )* EOF
            {
            match(input,63,FOLLOW_63_in_tggRuleCollection62); 

            name=(Token)match(input,IDENT,FOLLOW_IDENT_in_tggRuleCollection66); 

             n = new ASTTggRuleCollection(name); 

            match(input,53,FOLLOW_53_in_tggRuleCollection74); 

            direction=(Token)input.LT(1);

            if ( input.LA(1)==48||input.LA(1)==52||input.LA(1)==56||input.LA(1)==59||input.LA(1)==62 ) {
                input.consume();
                state.errorRecovery=false;
            }
            else {
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            // RTLRule.g:52:5: ( (matchID= IDENT ':=' )? ruleApplication SEMI )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COND_EXPR||LA2_0==IDENT||LA2_0==46||LA2_0==54||LA2_0==57) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // RTLRule.g:52:6: (matchID= IDENT ':=' )? ruleApplication SEMI
            	    {
            	    // RTLRule.g:52:6: (matchID= IDENT ':=' )?
            	    int alt1=2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0==IDENT) ) {
            	        int LA1_1 = input.LA(2);

            	        if ( (LA1_1==COLON_EQUAL) ) {
            	            alt1=1;
            	        }
            	    }
            	    switch (alt1) {
            	        case 1 :
            	            // RTLRule.g:52:7: matchID= IDENT ':='
            	            {
            	            matchID=(Token)match(input,IDENT,FOLLOW_IDENT_in_tggRuleCollection98); 

            	            match(input,COLON_EQUAL,FOLLOW_COLON_EQUAL_in_tggRuleCollection100); 

            	            }
            	            break;

            	    }


            	    pushFollow(FOLLOW_ruleApplication_in_tggRuleCollection104);
            	    ruleApplication1=ruleApplication();

            	    state._fsp--;


            	    match(input,SEMI,FOLLOW_SEMI_in_tggRuleCollection106); 

            	    match = new ASTTggRuleMatch(matchID,ruleApplication1);

            	    n.addTggRuleMatch(match);

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            // RTLRule.g:55:5: (tggRule= tggRuleDefinition )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==61) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // RTLRule.g:55:7: tggRule= tggRuleDefinition
            	    {
            	    pushFollow(FOLLOW_tggRuleDefinition_in_tggRuleCollection133);
            	    tggRule=tggRuleDefinition();

            	    state._fsp--;


            	     n.addTggRule(tggRule); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            match(input,EOF,FOLLOW_EOF_in_tggRuleCollection144); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return n;
    }
    // $ANTLR end "tggRuleCollection"



    // $ANTLR start "ruleApplication"
    // RTLRule.g:64:1: ruleApplication returns [ASTTggRuleApplication n] : (simpleApp= simpleApplication |multiApp= multiApplication |restrictedApp= restrictedApplication |selectedApp= selectedApplication );
    public final ASTTggRuleApplication ruleApplication() throws RecognitionException {
        ASTTggRuleApplication n = null;


        ASTTggRuleSimpleApplication simpleApp =null;

        ASTTggRuleMultiApplication multiApp =null;

        ASTTggRuleRestrictedApplication restrictedApp =null;

        ASTTggRuleSelectedApplication selectedApp =null;


        try {
            // RTLRule.g:64:25: (simpleApp= simpleApplication |multiApp= multiApplication |restrictedApp= restrictedApplication |selectedApp= selectedApplication )
            int alt4=4;
            switch ( input.LA(1) ) {
            case IDENT:
                {
                alt4=1;
                }
                break;
            case 54:
                {
                alt4=2;
                }
                break;
            case 57:
                {
                alt4=3;
                }
                break;
            case COND_EXPR:
            case 46:
                {
                alt4=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // RTLRule.g:65:2: simpleApp= simpleApplication
                    {
                    pushFollow(FOLLOW_simpleApplication_in_ruleApplication165);
                    simpleApp=simpleApplication();

                    state._fsp--;


                    n = simpleApp;

                    }
                    break;
                case 2 :
                    // RTLRule.g:66:3: multiApp= multiApplication
                    {
                    pushFollow(FOLLOW_multiApplication_in_ruleApplication172);
                    multiApp=multiApplication();

                    state._fsp--;


                    n = multiApp;

                    }
                    break;
                case 3 :
                    // RTLRule.g:67:3: restrictedApp= restrictedApplication
                    {
                    pushFollow(FOLLOW_restrictedApplication_in_ruleApplication180);
                    restrictedApp=restrictedApplication();

                    state._fsp--;


                    n = restrictedApp;

                    }
                    break;
                case 4 :
                    // RTLRule.g:68:3: selectedApp= selectedApplication
                    {
                    pushFollow(FOLLOW_selectedApplication_in_ruleApplication188);
                    selectedApp=selectedApplication();

                    state._fsp--;


                    n = selectedApp;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return n;
    }
    // $ANTLR end "ruleApplication"



    // $ANTLR start "simpleApplication"
    // RTLRule.g:77:1: simpleApplication returns [ASTTggRuleSimpleApplication n] : name= IDENT LPAREN RPAREN ;
    public final ASTTggRuleSimpleApplication simpleApplication() throws RecognitionException {
        ASTTggRuleSimpleApplication n = null;


        Token name=null;

        try {
            // RTLRule.g:77:27: (name= IDENT LPAREN RPAREN )
            // RTLRule.g:78:2: name= IDENT LPAREN RPAREN
            {
            name=(Token)match(input,IDENT,FOLLOW_IDENT_in_simpleApplication209); 

            match(input,LPAREN,FOLLOW_LPAREN_in_simpleApplication211); 

            match(input,RPAREN,FOLLOW_RPAREN_in_simpleApplication213); 

            n = new ASTTggRuleSimpleApplication(name);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return n;
    }
    // $ANTLR end "simpleApplication"



    // $ANTLR start "multiApplication"
    // RTLRule.g:87:1: multiApplication returns [ASTTggRuleMultiApplication n] : 'do' (ruleApp= ruleApplication SEMI )* 'while' cond= COND_EXPR ;
    public final ASTTggRuleMultiApplication multiApplication() throws RecognitionException {
        ASTTggRuleMultiApplication n = null;


        Token cond=null;
        ASTTggRuleApplication ruleApp =null;



        	ASTCondition nCon = null;
        	n = new ASTTggRuleMultiApplication();

        try {
            // RTLRule.g:92:2: ( 'do' (ruleApp= ruleApplication SEMI )* 'while' cond= COND_EXPR )
            // RTLRule.g:93:2: 'do' (ruleApp= ruleApplication SEMI )* 'while' cond= COND_EXPR
            {
            match(input,54,FOLLOW_54_in_multiApplication237); 

            // RTLRule.g:94:2: (ruleApp= ruleApplication SEMI )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COND_EXPR||LA5_0==IDENT||LA5_0==46||LA5_0==54||LA5_0==57) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // RTLRule.g:94:3: ruleApp= ruleApplication SEMI
            	    {
            	    pushFollow(FOLLOW_ruleApplication_in_multiApplication245);
            	    ruleApp=ruleApplication();

            	    state._fsp--;


            	    match(input,SEMI,FOLLOW_SEMI_in_multiApplication247); 

            	    n.addRuleMultiApplication(ruleApp);

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            match(input,64,FOLLOW_64_in_multiApplication254); 

            cond=(Token)match(input,COND_EXPR,FOLLOW_COND_EXPR_in_multiApplication259); 

            nCon = new ASTCondition(cond);
            	n.setCond(nCon);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return n;
    }
    // $ANTLR end "multiApplication"



    // $ANTLR start "restrictedApplication"
    // RTLRule.g:106:1: restrictedApplication returns [ASTTggRuleRestrictedApplication n] : 'if' cond= COND_EXPR LBRACE (ruleApp= ruleApplication SEMI )* RBRACE ;
    public final ASTTggRuleRestrictedApplication restrictedApplication() throws RecognitionException {
        ASTTggRuleRestrictedApplication n = null;


        Token cond=null;
        ASTTggRuleApplication ruleApp =null;



        	ASTCondition nCon = null;
        	n = new ASTTggRuleRestrictedApplication();

        try {
            // RTLRule.g:111:2: ( 'if' cond= COND_EXPR LBRACE (ruleApp= ruleApplication SEMI )* RBRACE )
            // RTLRule.g:112:2: 'if' cond= COND_EXPR LBRACE (ruleApp= ruleApplication SEMI )* RBRACE
            {
            match(input,57,FOLLOW_57_in_restrictedApplication283); 

            cond=(Token)match(input,COND_EXPR,FOLLOW_COND_EXPR_in_restrictedApplication288); 

            match(input,LBRACE,FOLLOW_LBRACE_in_restrictedApplication291); 

            // RTLRule.g:115:2: (ruleApp= ruleApplication SEMI )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==COND_EXPR||LA6_0==IDENT||LA6_0==46||LA6_0==54||LA6_0==57) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // RTLRule.g:115:3: ruleApp= ruleApplication SEMI
            	    {
            	    pushFollow(FOLLOW_ruleApplication_in_restrictedApplication299);
            	    ruleApp=ruleApplication();

            	    state._fsp--;


            	    match(input,SEMI,FOLLOW_SEMI_in_restrictedApplication301); 

            	    n.addRuleRestrictedApplication(ruleApp);

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            match(input,RBRACE,FOLLOW_RBRACE_in_restrictedApplication308); 

            nCon = new ASTCondition(cond);
            	n.setCond(nCon);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return n;
    }
    // $ANTLR end "restrictedApplication"



    // $ANTLR start "selectedApplication"
    // RTLRule.g:126:1: selectedApplication returns [ASTTggRuleSelectedApplication n] : ( 'apply' (name= IDENT ) |cond= COND_EXPR );
    public final ASTTggRuleSelectedApplication selectedApplication() throws RecognitionException {
        ASTTggRuleSelectedApplication n = null;


        Token name=null;
        Token cond=null;


        	ASTCondition nCon = null;

        try {
            // RTLRule.g:130:2: ( 'apply' (name= IDENT ) |cond= COND_EXPR )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==46) ) {
                alt7=1;
            }
            else if ( (LA7_0==COND_EXPR) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }
            switch (alt7) {
                case 1 :
                    // RTLRule.g:131:2: 'apply' (name= IDENT )
                    {
                    match(input,46,FOLLOW_46_in_selectedApplication333); 

                    // RTLRule.g:132:2: (name= IDENT )
                    // RTLRule.g:132:3: name= IDENT
                    {
                    name=(Token)match(input,IDENT,FOLLOW_IDENT_in_selectedApplication339); 

                    }


                    }
                    break;
                case 2 :
                    // RTLRule.g:133:3: cond= COND_EXPR
                    {
                    cond=(Token)match(input,COND_EXPR,FOLLOW_COND_EXPR_in_selectedApplication346); 

                    nCon = new ASTCondition(cond);

                    n = new ASTTggRuleSelectedApplication(name, nCon);

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return n;
    }
    // $ANTLR end "selectedApplication"



    // $ANTLR start "tggRuleDefinition"
    // RTLRule.g:143:1: tggRuleDefinition returns [ASTTggRule n] : 'rule' name= IDENT ( 'mode' 'EXPLICIT' )? 'checkSource' sourceRule= ruleDefinition 'checkTarget' targetRule= ruleDefinition 'checkCorr' corrRule= corrRuleDefinition 'end' ;
    public final ASTTggRule tggRuleDefinition() throws RecognitionException {
        ASTTggRule n = null;


        Token name=null;
        ASTRule sourceRule =null;

        ASTRule targetRule =null;

        ASTCorrRule corrRule =null;



          boolean isDeletingRule = false;

        try {
            // RTLRule.g:147:5: ( 'rule' name= IDENT ( 'mode' 'EXPLICIT' )? 'checkSource' sourceRule= ruleDefinition 'checkTarget' targetRule= ruleDefinition 'checkCorr' corrRule= corrRuleDefinition 'end' )
            // RTLRule.g:148:5: 'rule' name= IDENT ( 'mode' 'EXPLICIT' )? 'checkSource' sourceRule= ruleDefinition 'checkTarget' targetRule= ruleDefinition 'checkCorr' corrRule= corrRuleDefinition 'end'
            {
            match(input,61,FOLLOW_61_in_tggRuleDefinition376); 

            name=(Token)match(input,IDENT,FOLLOW_IDENT_in_tggRuleDefinition380); 

            // RTLRule.g:149:5: ( 'mode' 'EXPLICIT' )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==60) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // RTLRule.g:149:6: 'mode' 'EXPLICIT'
                    {
                    match(input,60,FOLLOW_60_in_tggRuleDefinition387); 

                    match(input,45,FOLLOW_45_in_tggRuleDefinition389); 

                    isDeletingRule = true;

                    }
                    break;

            }


            match(input,50,FOLLOW_50_in_tggRuleDefinition398); 

            pushFollow(FOLLOW_ruleDefinition_in_tggRuleDefinition408);
            sourceRule=ruleDefinition();

            state._fsp--;


            match(input,51,FOLLOW_51_in_tggRuleDefinition414); 

            pushFollow(FOLLOW_ruleDefinition_in_tggRuleDefinition424);
            targetRule=ruleDefinition();

            state._fsp--;


            match(input,49,FOLLOW_49_in_tggRuleDefinition430); 

            pushFollow(FOLLOW_corrRuleDefinition_in_tggRuleDefinition440);
            corrRule=corrRuleDefinition();

            state._fsp--;


            match(input,55,FOLLOW_55_in_tggRuleDefinition446); 

            n = new ASTTggRule(name,sourceRule,targetRule,corrRule,isDeletingRule);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return n;
    }
    // $ANTLR end "tggRuleDefinition"



    // $ANTLR start "ruleDefinition"
    // RTLRule.g:164:1: ruleDefinition returns [ASTRule n] : LPAREN lhs= patternDefinition RPAREN LBRACE rhs= patternDefinition RBRACE ;
    public final ASTRule ruleDefinition() throws RecognitionException {
        ASTRule n = null;


        ASTPattern lhs =null;

        ASTPattern rhs =null;


        try {
            // RTLRule.g:165:5: ( LPAREN lhs= patternDefinition RPAREN LBRACE rhs= patternDefinition RBRACE )
            // RTLRule.g:166:5: LPAREN lhs= patternDefinition RPAREN LBRACE rhs= patternDefinition RBRACE
            {
            match(input,LPAREN,FOLLOW_LPAREN_in_ruleDefinition472); 

            pushFollow(FOLLOW_patternDefinition_in_ruleDefinition484);
            lhs=patternDefinition();

            state._fsp--;


            match(input,RPAREN,FOLLOW_RPAREN_in_ruleDefinition490); 

            match(input,LBRACE,FOLLOW_LBRACE_in_ruleDefinition493); 

            pushFollow(FOLLOW_patternDefinition_in_ruleDefinition505);
            rhs=patternDefinition();

            state._fsp--;


            match(input,RBRACE,FOLLOW_RBRACE_in_ruleDefinition511); 

            n = new ASTRule(lhs,rhs);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return n;
    }
    // $ANTLR end "ruleDefinition"



    // $ANTLR start "corrRuleDefinition"
    // RTLRule.g:177:1: corrRuleDefinition returns [ASTCorrRule n] : LPAREN lhs= corrPatternDefinition RPAREN LBRACE rhs= corrPatternDefinition RBRACE ;
    public final ASTCorrRule corrRuleDefinition() throws RecognitionException {
        ASTCorrRule n = null;

